fix(footer): footer z-index to 1

--- a/public/assets/css/components/sticky_footer/styles.css
+++ b/public/assets/css/components/sticky_footer/styles.css
@@ -2,4 +2,5 @@
     bottom: 0;
     background-color: #efefef;
     font-size: 0.8rem;
+    z-index: 1
 }
